# spell_check

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  Makefile  Makefile.slurm  Makefile.utils  README.md  README.rst  REPRODUCE.rst  docker-compose.yaml  help.sh  migrate_gnn_lib_to_nsc.py  mypy.ini  nginx.conf  requirements.txt  rsync_exclude.txt  setup.py
configs/: server.yaml
docker/: Makefile  help.sh
docs/: .buildinfo  index.html  modules.rst  nsc.rst  nsc_man  objects.inv  readme.rst  reproduce.rst
docs/_static/: documentation_options.js
gnn_lib/: __init__.py  preprocess.py  test.py  train.py
gnn_lib/api/: __init__.py  sec.py  sed.py  tables.py  tokenization_repair.py  utils.py
gnn_lib/data/: __init__.py  datasets.py  graph.py  index.py  noise.py  preprocessing.py  tokenization.py  utils.py  variants.py
gnn_lib/models/: __init__.py  attention_gnn.py  general_gnn.py  hierarchical_gnn.py  message_passing_gnn.py  simple_gnn.py  transformer_gnn.py
gnn_lib/modules/: __init__.py  embedding.py  encoders.py  gnn.py  heads.py  inference.py  optimizer.py  (+4 more)
nsc/: __init__.py  preprocess.py  train.py
server_config/: dictionary.txt  server.yaml
spell_checking/: Makefile  Makefile.setup  __init__.py  requirements.txt
spell_checking/utils/edit_distance_rs/: Cargo.toml  Makefile
spell_checking/utils/edit_distance_rs/src/: lib.rs
spelling_correction/: Makefile  __init__.py  requirements.txt  welcome.sh
sphinx_docs/: conf.py  index.rst  models.csv  models.rst  readme.rst  reproduce.rst
tests/: __init__.py
webapp/: .gitignore  README.md  pubspec.yaml
(+852 files in other folders)
