[package]
name = "edit_distance_rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "edit_distance_rs"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
unicode-segmentation = "1.9.0"
rayon = "1.5.2"
indicatif = { version = "0.17.0-rc.10", features = ["rayon"] }

[dependencies.pyo3]
version = "0.16.4"
features = ["extension-module"]
